# dragon-quant

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEMAP.generated.md  CODEMAP.md  LICENSE  README.md  encrypt_token.sh  fewshot.md  publish.sh  publish_token.enc  pyproject.toml  技术方案.md  评分器Refactor.md  评分器技术方案.md
.github/: CODEOWNERS
dragon_quant/: __init__.py  __main__.py  absorption.py  analyze.py  anti_drop.py  cli.py  data.py  drive_analysis.py  eastmoney_api.py  fix_api.py  leadership.py  log_builder.py  main.py  orchestrator.py  persist_logger.py  preload.py  rate_limit.py  review.py  xq_cookie_refresh.py  xueqiu_api.py
dragon_quant/cache/: data_cache.py
dragon_quant/config/: __init__.py  api_config.py
dragon_quant/logging/: CODEMAP.md  __init__.py  logger.py  query.py  reporter.py
dragon_quant/models/: types.py
dragon_quant/providers/: CODEMAP.md  __init__.py  base.py  browser.py  cookie.py  eastmoney.py  tencent.py  ths.py  xueqiu.py
dragon_quant/review/: __init__.py  dedup.py  entry.py  reporter.py  reviewer.py
dragon_quant/scorers/: __init__.py  absorption.py  anti_drop.py  drive.py  leadership.py
dragon_quant/scorers_v2/: CODEMAP.md  __init__.py  absorption.py  aggregator.py  anti_drop.py  base.py  drive.py  leadership.py  liquidity.py  registry.py
dragon_quant/storage/: db.py  manager.py  paths.py
dragon_quant/utils/: __init__.py  trading.py
dragon_quant/vpa/: __init__.py  engine.py  report.py  types.py
references/: api_reference.md
review/: 技术方案.md
scripts/: analyze.py  gen_codemap.py  main.py
tests/: test_cache.py  test_cli.py  test_logging.py  test_models.py  test_orchestrator_helpers.py  test_provider_cache.py  test_providers_cookie.py  test_providers_parsing.py  test_rate_limit.py  test_review.py  test_scorers_absorption.py  test_scorers_anti_drop.py  test_scorers_drive.py  test_scorers_leadership.py  test_scorers_v2.py  test_storage.py  test_ths.py  test_vpa.py
web_ui/: __init__.py  index.html  server.py
(+18 files in other folders)
