[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dragon-quant"
version = "0.1.0"
description = "龙头战法四维量化筛选系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[[project.authors]]
name = "gitBingxu"

[project.urls]
repository = "https://github.com/gitBingxu/dragon-quant"
