[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dragon_quant", "dragon_quant.*"]

[project]
name = "dragon-quant"
version = "0.1.9"
description = "龙头战法四维量化筛选系统 — A股涨停板龙头识别工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.30",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[[project.authors]]
name = "gitBingxu"

[project.urls]
repository = "https://github.com/gitBingxu/dragon-quant"

[project.scripts]
dragon-quant = "dragon_quant.cli:main"
